<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Share APKs</string>
	<string name="action_settings">Settings</string>

	<string name="share_list">%1$s is sharing %2$d APKs.</string>
	<string name="wait_receive_dl_title">Waiting</string>
	<string name="wait_receive_dl_message">Waiting to receive APKs.</string>
	<string name="choose_app">Please select APPs</string>
	<string name="selected_app">APP(%1$d)</string>

	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="change_name">Change name</string>
	<string name="name_empty">Please input a user name.</string>

	<string name="waittosend">Waiting for sharing request messages from friends &#8230;</string>
	<string name="sendto">to</string>

	<string name="requestsendtitle">A sharing request message is received</string>
	<string name="requestsendmessage">Will you share the APKs to %1$s?</string>
	<string name="from">Receive from</string>

	<string name="waittoreceive">A sharing request message is being sent &#8230;</string>
	<string name="sendreject">Sorry! You are declined from %1$s.</string>

	<string name="send_by_bluetooth">Share the APP of \"Share APKs\" by Bluetooth</string>
	<string name="send_by_bluetooth_title">Information</string>
    <string name="send_by_bluetooth_message">Please the receiver starts Blue-Tooth and sets it to be visible.</string>
    <string name="haveinstalled">Installed</string>

	<string name="app_action_view">Details</string>
	<string name="app_action_install">Install</string>
	<string name="app_action_launch">Launch</string>
	<string name="app_action_uninstall">Un-install</string>
	<string name="app_action_delete">Remove</string>
	<string name="app_action_bluetoothshare">Share by Bluetooth</string>
	<string name="app_action_property">Properties</string>

    <string name="toast_send">Send</string>
    <string name="toast_rename">Change name</string>
    <string name="toast_unselect">Un-select all</string>
    <string name="toast_refuse">Close the notification</string>

	<string name="packagename">Package</string>
    <string name="version">Version</string>
    <string name="sourcedir">Path</string>

    <string name="delete_confirm">Confirmation</string>
    <string name="areyousure_delete">Are you sure to remove %1$s from disk?</string>

    <string name="tiptext">\"Share APKs\" supports to be shared by NFC and Beam directly. Touch another Mobile or Pad back to back to share \"Share APKs\".</string>
    <string name="setnfc">Settings</string>
    <string name="nextifnotify">Never remind me again</string>
    <string name="iknown">Ignore it</string>
</resources>
