<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_view"
        android:title="@string/app_action_view"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_launch"
        android:title="@string/app_action_launch"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_uninstall"
        android:title="@string/app_action_uninstall"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_bluetoothshare"
        android:title="@string/app_action_bluetoothshare"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_property"
        android:title="@string/app_action_property"
        android:showAsAction="ifRoom|withText" />

</menu>