<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:background="@drawable/menu_box_white_gray_normal"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/linearLayout1"
        android:orientation="vertical" >
        
	    <TextView
	        android:id="@+id/tv_tip"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:gravity="left"
	        android:text="@string/tiptext"
	        android:textSize="16sp" />    
	
	    <CheckBox
	        android:id="@+id/checkbox"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/nextifnotify" />
    
    </LinearLayout>
    
    <LinearLayout android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_setnfc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/nfc_btn_background"
            android:layout_weight="1"
             android:textSize="18sp"
            android:text="@string/setnfc" />

        <Button
            android:id="@+id/bt_cancle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/nfc_btn_background"
            android:layout_weight="1"
             android:textSize="18sp"
            android:text="@string/iknown" />
        
    </LinearLayout>

</RelativeLayout>
</LinearLayout>